# SurrogateProject

./: .gitignore  Logar nos servidores.txt  aux.md  aux.txt  environment.yml  pyproject.toml  saida.txt  setup.py  test.ipynb  teste_meka.py
conclusions/: surrogate_ranking.ipynb  surrogate_ranking.py
configs/: feature_schema.json  global_hyperparameter_ranges.json  hyperparameter_ranges_medical.json  hyperparameter_ranges_scene.json  hyperparameter_ranges_yeast.json  pipeline_rules.json
configuration/: Configuration.py  FP.py  MLC.py
experiments/: candidate_generation_experiment.py  candidate_validation_experiment.py  generation_experiments.py  multi_output_experiment.py  multi_output_experiments.py  native_experiment.py  native_experiments.py  regressor_chain_experiment.py  regressor_chain_experiments.py  validation_experiment.py
explaining/: 02_model_template.ipynb
json_configs/: global_hyperparameter_ranges.json  hyperparameter_ranges_birds.json  hyperparameter_ranges_enron.json
mlfs/: br_relieff.py  d2f_adapted.py  igmf_adapted.py  lrfs_adapted.py  lsmfs_adapted.py  mdmr_adapted.py  mlsmfs_adapted.py  pmu_adapted.py  ppt_mi_adapted.py  ppt_relieff.py  ppt_rfe.py  ppt_sfm.py  ppt_skb.py  scls_adapted.py
model_selection/: best_model_validation.ipynb
notebooks/: 01_eda_and_processing.ipynb  01_pre_processing.ipynb  02_model_template.ipynb  02_model_training.ipynb  02_modelagem_template.ipynb  03_exploring_results.ipynb  03_exploring_training_results.ipynb  03_main_workflow.ipynb  04_model_selection.ipynb  04_model_validation.ipynb  main_workflow.ipynb  (+5 more)
(+90 files in other folders)
