[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ic"
version = "0.1.0"
description = "Framework de busca de pipelines para classificação multi-label"
authors = [
    {name = "Leonardo", email = "leodemore@usp.br"}
]
dependencies = [
    "pandas",
    "numpy",
    "joblib",
    "xgboost",
    "lightgbm",
    "scikit-learn",
    "pygad",
]
requires-python = ">=3.8"

[tool.setuptools]
packages = ["src"]